--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^5.3.3",
+    "@pinia/nuxt": "^0.4.2",
     "nuxt": "3.0.0-rc.10"
+  },
+  "dependencies": {
+    "pinia": "^2.0.22"
   }
 }
