Initial landing screen design

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "nuxt": "3.0.0-rc.10"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
     "pinia": "^2.0.22"
   }
 }
